app/blueprints/page.module.scss
.hero {
  position: relative;
  padding: 0;
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: 100vw;
  min-height: 50vh;
}
.hero:first-of-type {
  min-height: 75vh;
}
.headingHero {
  max-width: 90vw;
  margin: 0 auto;
  z-index: 1;
}
.headingHero h1 {
  letter-spacing: var(--letter-spacing-tight);
  line-height: 1.3;
  max-width: 16em;
}
.headingHero h1 span:first-of-type {
  display: inline-block;
  font-size: var(--heading-06);
  letter-spacing: var(--letter-spacing-normal);
  color: var(--color-foreground-accent);
  margin-bottom: var(--size-02);
  z-index: 1;
}
.heroImage {
  width: 100%;
  height: 100%;
  min-height: 50vh;
  object-fit: cover;
  position: absolute;
  overflow: hidden;
  top: 0;
  left: 0;
  z-index: 0;
}
.cover {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(
    180deg,
    var(--color-background-primary) 0%,
    var(--color-core-transparent) 10% 90%,
    var(--color-background-primary) 100%
  );
  z-index: 0;
}
.about {
  max-width: 1440px;
  margin: 0 auto;
}
.quip {
  position: relative;
  padding: 15vh 0;
  min-height: unset;
  padding: unset;
}
.education {
  padding: 5vh 0 0 0;
  min-height: unset;
}
@media screen and (max-width: 992px) { 
}
.blueprintSVG {
  display: grid;
  grid-template-columns: 1fr 1fr;
  filter: blur(4px);

  & > div:first-of-type {
    display: flex;
    justify-content: center;
    align-items: center; 
    overflow: hidden;
    height: 100%;
    width: 100%;
  }
  .propsvg {
    opacity: 0;
  }
  &:hover {  
    filter: blur(1px);
    .faceplate {
      transform: translateY(-10%);
      opacity: 0;
    }
    .bottom {
      transform:  translateY(10%);
    }
    .top {
      transform: translateY(-10%);
    }
    .middle {
      transform: translateY(0%);
    }
    .propsvg {
      transform: translateY(-10%); 
      opacity: 1;
    }
    .propsTable svg {
      opacity: .7;
    }
  }
}
.component { 
  display: grid;
  grid-template-columns: 1fr; 
  justify-content: center;
  align-items: center;
  .faceplate {
   z-index: 3
  }
  .bottom {
  z-index: 0

  }
  .top {
   z-index: 2
  }
  .middle {
   z-index: 1
  }
  .propsvg {
   z-index: 4 
  }
  .propsTable svg {
    opacity: 0;
  }
  svg {
    width: 75%;
    height: 75%;
    margin: 0 auto;
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 1;
    grid-row-end: 2;
    transform: translateY(0);
    transition: all 0.3s ease-in-out;
  }
} 

